# bongo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
bongo/: app.go  color.go  input_handler.go  ui.go
database/: database.go
database/mongo/: mongo.go
mongo/: mongo.go
src/: app.rs  helper.rs  main.rs  tree.rs  ui.rs
src/mongo/: docker-compose.yaml  mod.rs
