[package]
name = "bongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
crossterm = "0.25"
unicode-width = "0.1.4"
linked-hash-map = "0.5.6"
clearscreen = "1.0.10"
tui-tree-widget = "0.11.0"

[dependencies.mongodb]
version = "2.2.0"
features = ["tokio-sync"]
